more more code smells